# caviarder

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-push
.github/workflows/: benchmark.yml  release.yml
benches/: per_rule.rs
config/: custom.toml
confusion/: main.rs
docs/superpowers/plans/: 2026-06-23-scrub-implementation.md  2026-06-24-benchmark-implementation.md
docs/superpowers/specs/: 2026-06-23-scrub-design.md
ml/: train_xgb.py
ml/output/: model_xgb.rs
scripts/: bump.sh  setup-bench-data.sh
src/: lib.rs  main.rs  ml.rs  ml_model.rs  rules.rs
tests/: integration.rs
tests/fixtures/: basic.txt  edge.txt
